api_gateway/manifests/api-gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: payment-api-gateway
          image: dbharti001/payment-api-gateway
